apps/staging/terria/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terria
  namespace: terria
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: maps.staging.spatialinsite.com.au
spec:
  ingressClassName: nginx
  rules:
    - host: maps.staging.spatialinsite.com.au
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: terria
                port:
                  number: 3001
  tls:
    - hosts:
        - maps.staging.spatialinsite.com.au
      secretName: terria-ingress
